--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <div class="home__row">
    <div class="home__item home-item">
     <div class="home-item__content">
-     <div class="home-item__title">Think outside</div>
+     <h1 class="home-item__title">Think outside</h1>
 
      <div class="home-item__sub">of the box</div>
     </div>
@@ -66,7 +66,7 @@
       <div class="about-site__row">
        <div class="about-site__column">
         <div class="about-site__item about-item">
-         <div class="section-title">Who we are</div>
+         <h2 class="section-title">Who we are</h2>
          <div class="about-item__text">
           Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
           inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
@@ -89,7 +89,7 @@
      <div class="service__figure"></div>
 
      <div class="container">
-      <div class="section-title">What we do</div>
+      <h2 class="section-title">What we do</h2>
       <div class="service__row">
        <div class="service__column">
         <div class="service__item service-item">
@@ -172,7 +172,7 @@
      <div class="process-work__row">
       <div class="process-work__column">
        <div class="process-work__item process-item">
-        <div class="section-title">How we works</div>
+        <h2 class="section-title">How we works</h2>
         <div class="process-item__text">
          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus
          error sit voluptatem accusantium doloremque laudantium.
@@ -225,7 +225,7 @@
     <section class="team" id="team">
      <div class="team__figure"></div>
 
-     <div class="section-title">Our creative team</div>
+     <h2 class="section-title">Our creative team</h2>
      <div class="team__row">
       <div class="team-slider swiper-container">
        <div class="team-slider__wrapper swiper-wrapper">
@@ -269,20 +269,20 @@
      <div class="clientage__figure left-figure"></div>
      <div class="clientage__figure right-figure"></div>
      <div class="container">
-      <div class="section-title">What client says</div>
+      <h2 class="section-title">What client says</h2>
       <div class="clientage__row">
        <div class="clientage__item clientage-item">
         <div class="clientage-item__img">
          <img src="./img/comment.png" alt="" />
         </div>
 
-        <article class="clientage-item__comment comment">
+        <div class="clientage-item__comment comment">
          <div class="comment__text">
           Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus
           error sit voluptatem accusantium doloremque laudantium.
          </div>
          <div class="comment__sub">Jinny Snow, Company CEO</div>
-        </article>
+        </div>
        </div>
       </div>
      </div>
