--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta name="keywords" content="Агенство по созданию сайтов,Agensy" />
 <meta name="theme-color" content="#ffffff" />
 <link rel="canonical" href="https://agensy-site.netlify.app " />
-<link rel="preconnect" href="//fontawesome.com" />
-
+<link rel="preconnect" href="https://fontawesome.com/" />
+<link rel="preconnect" href="https://fontawesome.com/" />
   <link rel="stylesheet" href="css/style.min.css" />
  </head>
  <body>
